--- a/src/app/table/annotation/annotation.component.html
+++ b/src/app/table/annotation/annotation.component.html
@@ -40,7 +40,7 @@
 </div>
 
   <ngl-form-element [error]="hasError ? error : null" class="slds-m-top--small">
-    <input nglFormControl auto-complete [(ngModel)]="annotation.source" [source]="listOfSubjects" (keyup)="autocomplete()"
+    <input nglFormControl auto-complete [(ngModel)]="annotation.source" [source]="listOfSubjects" (change)="getSubjects()"
            type="text" attr.data-value="{{ colId }}.Source" placeholder="Insert here source" value="{{ annotation.source }}"
            [required]="required">
     <input nglFormControl auto-complete [(ngModel)]="annotation.property" [source]="propertySuggestions" (keyup)="autocomplete()"
