partial use of Observable to manage the subjects

--- a/src/app/sidebar.import/sidebar.import.component.html
+++ b/src/app/sidebar.import/sidebar.import.component.html
@@ -7,6 +7,9 @@
       <option>Airports</option>
       <option>Customer</option>
       <option>Product</option>
+      <option>Race</option>
+      <option>Meteo</option>
+
 
     </select>
   </ngl-form-element>
